[package]
name = "forge-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["full"] }
bollard = "0.16.0"
uuid = { version = "1.7.0", features = ["v4"] }
futures-util = "0.3.31"
colored = "2.1.0"
indicatif = "0.17.8"

[dev-dependencies]
tempfile = "3.10.1"
